fix: fix the navbar overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
 body{   
+    display: grid;
+    align-items: center;
     background-color: lightgray;
 }
